# hk

./: .gitignore  LICENSE  README.md
instance/: CMakeLists.txt  MiniSearch.bat  MiniSearch_编译.bat  run.bat  run.sh
instance/App/: CMakeLists.txt  common.h  main.c
instance/Index/: CMakeLists.txt  index.c  index.h
instance/Preprocess/: CMakeLists.txt  preprocess.c  preprocess.h
instance/Search/: CMakeLists.txt  search.c  search.h
instance/input/: test_1.txt
instance/tests/: test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt
lectures/: 01-intro.md  02-pytorch-basics.md  03-data-prep.md  04-training-tuning.md  05-evaluation.md  06-advanced-architectures.md  07-transfer-learning.md  08-model-compression.md  09-model-export.md  10-deployment.md  11-ci-cd.md  12-project-final.md
notebooks/: 02-transfer-learning.py  03-data-augmentation.py  04-training-tuning.py  05-evaluation.py  06-architectures.py  07-transfer-learning.py  08-compression.py  09-export.ipynb  10-deployment.ipynb  11-ci-cd.ipynb  12-project-template.ipynb
